--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <span> Coder </span>
                             </span>
                         </span></h2>
-                        <p>I develop projects on software, embedded systems, and artificial intelligence. On this page, I share my work, events, and blog posts.</p>
+                        <p>I develop projects on software, frontend, and backend. On this page, I share my work, events, and blog posts.</p>
                         <p><a class="cta" href="#projeler">View My Projects</a></p>
                     </div>
                     <div class="hero-image">
